# tuk-power

./: .gitignore  README.md  generate_figures.py  generate_figures_presentation.sh  no_prefetch.csv  run_benchmark.sh  run_presentation_benchmark.sh  smt1_col_aggro_prefetch.csv  smt1_col_no_prefetch.csv  smt1_col_with_prefetch.csv  smt1_row_aggro_prefetch.csv  smt1_row_no_prefetch.csv  smt1_row_with_prefetch.csv  test.sh  with_prefetch.csv  without_prefetch.csv
benchmark/: .gitignore  CMakeLists.txt  benchmark64bit.cpp  benchmark8bit.cpp  flags.h  main.cpp  make.sh  prefetching_intel  prefetching_intel.cpp
intel-results/: benchmark-cache-prefetch0-smt1-thread15-64bit-stats.txt  benchmark-cache-prefetch0-smt1-thread15-64bit.csv  benchmark-cache-prefetch0-smt1-thread15-8bit-stats.txt  benchmark-cache-prefetch0-smt1-thread15-8bit.csv  benchmark-cache-prefetch0-smt1-thread8-64bit-stats.txt  benchmark-cache-prefetch0-smt1-thread8-64bit.csv  benchmark-cache-prefetch0-smt1-thread8-8bit-stats.txt  benchmark-cache-prefetch0-smt1-thread8-8bit.csv  benchmark-cache-prefetch0-smt2-thread16-64bit-stats.txt  benchmark-cache-prefetch0-smt2-thread16-64bit.csv  benchmark-cache-prefetch0-smt2-thread16-8bit-stats.txt  benchmark-cache-prefetch0-smt2-thread16-8bit.csv  benchmark-cache-prefetch0-smt2-thread30-64bit-stats.txt  benchmark-cache-prefetch0-smt2-thread30-64bit.csv  benchmark-cache-prefetch0-smt2-thread30-8bit-stats.txt  benchmark-cache-prefetch0-smt2-thread30-8bit.csv  benchmark-cache-prefetch1-smt1-thread15-64bit-stats.txt  benchmark-cache-prefetch1-smt1-thread15-64bit.csv  (+82 more)
(+342 files in other folders)
